--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Penjualan
+application.vendor=hp
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,28 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Penjualan.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=C:\\Users\\hp\\OneDrive\\Documents\\Netbeans\\Libs_NetBeans_21\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections4-4.4.jar=C:\\Users\\hp\\OneDrive\\Documents\\Netbeans\\Libs_NetBeans_21\\commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\hp\\OneDrive\\Documents\\Netbeans\\Libs_NetBeans_21\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\hp\\OneDrive\\Documents\\Netbeans\\Libs_NetBeans_21\\commons-logging-1.2.jar
+file.reference.groovy-4.0.12.jar=C:\\Users\\hp\\OneDrive\\Documents\\Netbeans\\Libs_NetBeans_21\\groovy-4.0.12.jar
+file.reference.itext-2.1.7.js4.jar=C:\\Users\\hp\\Downloads\\itext-2.1.7.js4\\itext-2.1.7.js4\\itext-2.1.7.js4.jar
+file.reference.jasperreports-6.19.1.jar=C:\\Users\\hp\\OneDrive\\Documents\\Netbeans\\Libs_NetBeans_21\\jasperreports-6.19.1.jar
+file.reference.Netbeans_8.2_iReport-5.5.0-plugin.zip=C:\\Users\\hp\\OneDrive\\Documents\\Netbeans\\Netbeans_8.2_iReport-5.5.0-plugin.zip
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-4.0.12.jar}:\
+    ${file.reference.jasperreports-6.19.1.jar}:\
+    ${file.reference.Netbeans_8.2_iReport-5.5.0-plugin.zip}:\
+    ${file.reference.itext-2.1.7.js4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
